# cam_imu_sync_zephyr

./: CMakeLists.txt  README.rst  prj.conf
boards/: nrf52840dk_nrf52840.overlay
src/: app_state.c  app_state.h  imu.c  imu.h  main.c  trigger.c  trigger.h  uart_com.c  uart_com.h
